--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --ssl",
-    "build": "ng build --configuration production",
+    "build": "ng build --configuration production --base-href /demo/",
     "build-git": "ng build --configuration production --base-href /cafe/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
