--- a/src/web.config
+++ b/src/web.config
@@ -13,24 +13,17 @@
       </customHeaders>
     </httpProtocol>
 
-    <rewrite>
-      <rules>
-       <rule name="Handle History Mode and custom 404/500" stopProcessing="true">
-          <match url="(.*)" />
-          <conditions logicalGrouping="MatchAll">
-            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
-          </conditions>          
-          <action type="Rewrite" url="/index.html" />
-        </rule>
-        <rule name="httpTohttps" stopProcessing="true">
-          <match url="^(.*)$" />
-          <conditions>
-            <add input="{HTTPS}" pattern="off" ignoreCase="true" />
-          </conditions>
-          <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" redirectType="Permanent" />
-        </rule>
-      </rules>
-    </rewrite>
+   <rewrite>
+    <rules>
+      <rule name="Angular Routes" stopProcessing="true">
+        <match url=".*" />
+        <conditions logicalGrouping="MatchAll">
+          <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+          <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+        </conditions>
+        <action type="Rewrite" url="./index.html" />
+      </rule>
+    </rules>
+  </rewrite>
   </system.webServer>
 </configuration>
